--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@faker-js/faker": "^9.6.0",
     "@modelcontextprotocol/sdk": "^1.9.0",
     "axios": "^1.8.4",
+    "mcp-evals": "^1.0.18",
     "yaml": "^2.7.1",
     "zod": "^3.24.2"
   },
